be/src/runtime/buffered-block-mgr.cc
@@ -786,6 +786,8 @@ void BufferedBlockMgr::WriteComplete(Block* block, const Status& write_status) {
   if (encryption_) EncryptDone(block);
 
   // ReturnUnusedBlock() will clear the block, so save the client pointer.
+  // We have to be careful while touching the state because it may have been cleaned up by
+  // another thread.
   RuntimeState* state = block->client_->state_;
   // If the block was re-pinned when it was in the IOMgr queue, don't free it.
   if (block->is_pinned_) {
@@ -818,8 +820,12 @@ void BufferedBlockMgr::WriteComplete(Block* block, const Status& write_status) {
   DCHECK(Validate()) << endl << DebugInternal();
 
   if (!write_status.ok() || !status.ok() || is_cancelled_) {
+    VLOG_FILE << "Query: " << query_id_ << ". Write did not complete successfully: "
+        "write_status=" << write_status.GetDetail() << ", status=" << status.GetDetail()
+        << ". is_cancelled_=" << is_cancelled_;
+
     // If the instance is already cancelled, don't confuse things with these errors.
-    if (!state->is_cancelled()) {
+    if (!write_status.IsCancelled() && !state->is_cancelled()) {
       if (!write_status.ok()) {
         // Report but do not attempt to recover from write error.
         DCHECK(block->tmp_file_ != NULL);
